remove rem2px mixin

--- a/src/components/r-badge/r-badge.scss
+++ b/src/components/r-badge/r-badge.scss
@@ -8,11 +8,11 @@
     color: var(--text-color);
     border-radius: $line-height;
     border: none;
-    @include rem(padding, $space-xxs $space-s);
+    padding: $space-rem-xxs $space-rem-s;
     font-family: var(--primary-font-stack);
     font-weight: $regular;
-    @include rem(font-size, $paragraph);
-    @include rem(line-height, $line-height);
+    font-size: $paragraph-rem;
+    line-height: $line-height-rem;
     outline: none;
     white-space: nowrap;
     box-shadow: 0 0 0 2px #FFFFFF;
