--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,6 +25,18 @@ $space-l: 32px;
 $space-xl: 64px;
 $space-xxl: 128px;
 
+$inset-rem-s: 0.8rem 0.8rem 0.8rem 0.8rem;
+$inset-rem-m: 1.6rem 1.6rem 1.6rem 1.6rem;
+
+$space-rem-default: 2rem;
+$space-rem-xxs: 0.2rem;
+$space-rem-xs: 0.4rem;
+$space-rem-s: 0.8rem;
+$space-rem-m: 1.6rem;
+$space-rem-l: 3.2rem;
+$space-rem-xl: 6.4rem;
+$space-rem-xxl: 12.8rem;
+
 // Colors
 $muted: #6B7384;
 
@@ -42,9 +54,11 @@ $h3: 13px;
 $h4: 12px;
 $h5: 12px;
 $paragraph: 14px;
+$paragraph-rem: 1.4rem;
 
 // Line-height
 $line-height: 20px;
+$line-height-rem: 2rem;
 
 // Z-Index
 $z-modal: 2000;
