--- a/packages/recomponents/src/components/r-icon/r-icon.scss
+++ b/packages/recomponents/src/components/r-icon/r-icon.scss
@@ -12,7 +12,7 @@
     display: inline-block;
     vertical-align: middle;
     margin: -0.4rem 0 -0.2rem 0;
-    @include transition(all .15s ease);
+    transition: all .15s ease;
 }
 
 .r-icon-20 {
