--- a/packages/recomponents/src/components/r-radio/r-toggle.scss
+++ b/packages/recomponents/src/components/r-radio/r-toggle.scss
@@ -59,7 +59,7 @@ input.r-field-radio[type=radio] {
     top: $space-xxs;
     left: $space-xxs;
     box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.5) inset, 0 0 0 0 #0044D4;
-    @include transition(box-shadow .1s ease);
+    transition: box-shadow .1s ease;
 }
 
 .r-field-radio-style .r-icon {
@@ -93,7 +93,7 @@ input.r-field-radio[type=radio] {
         font-weight: $regular;
         font-size: $paragraph-rem;
         line-height: $line-height-rem;
-        @include transition(box-shadow .15s ease);
+        transition: box-shadow .15s ease;
         outline: none;
 
         &:hover {
