--- a/packages/recomponents/src/components/r-button/r-button.scss
+++ b/packages/recomponents/src/components/r-button/r-button.scss
@@ -29,8 +29,7 @@
 
     &:active {
         background: var(--background-color);
-        box-shadow: 0 0 0 1px var(--light-gray-color) inset,
-        0 1px 3px 1px var(--light-gray-color) inset;
+        box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 3px 1px var(--light-gray-color) inset;
     }
 
     &--size-small {
@@ -48,6 +47,7 @@
     &--type-default {
         background: linear-gradient(180deg, #fff 0, var(--background-color));
         color: var(--text-color);
+
         /*box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 2px 0 rgba(var(--gray-color), 0.3);*/
         box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.3);
 
@@ -61,8 +61,7 @@
 
         &:active {
             background: var(--background-color);
-            box-shadow: 0 0 0 1px var(--light-gray-color) inset,
-            0 1px 3px 1px var(--light-gray-color) inset;
+            box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 3px 1px var(--light-gray-color) inset;
         }
 
         &[disabled] {
@@ -75,15 +74,13 @@
             }
 
             &:active {
-                box-shadow: 0 0 0 1px var(--light-gray-color) inset,
-                0 1px 2px 0 rgba(var(--gray-color), 0.3);
+                box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 2px 0 rgba(var(--gray-color), 0.3);
             }
         }
     }
 
     &--type-primary {
-        background: linear-gradient(to bottom, var(--primary-color) 0%,
-                var(--primary-color-light) 100%);
+        background: linear-gradient(to bottom, var(--primary-color) 0%, var(--primary-color-light) 100%);
         color: #FFFFFF;
         box-shadow: 0 1px 2px 0 rgba(var(--gray-color), 0.8);
 
@@ -107,15 +104,13 @@
 
             &:hover,
             &:active {
-                background: linear-gradient(to bottom, var(--primary-color) 0%,
-                        var(--primary-color-light) 100%);
+                background: linear-gradient(to bottom, var(--primary-color) 0%, var(--primary-color-light) 100%);
             }
         }
     }
 
     &--type-warning {
-        background: linear-gradient(to bottom, var(--saturated-warning-color) 0%,
-                var(--warning-color) 100%);
+        background: linear-gradient(to bottom, var(--saturated-warning-color) 0%, var(--warning-color) 100%);
         color: #FFFFFF;
         box-shadow: 0 1px 2px 0 rgba(var(--gray-color), 0.8);
 
@@ -124,8 +119,7 @@
         }
 
         &:focus {
-            box-shadow: 0 0 0 1px var(--warning-color-dark) inset,
-            0 0 0 1px var(--warning-color-dark);
+            box-shadow: 0 0 0 1px var(--warning-color-dark) inset, 0 0 0 1px var(--warning-color-dark);
         }
 
         &:active {
@@ -140,15 +134,13 @@
 
             &:hover,
             &:active {
-                background: linear-gradient(to bottom, var(--saturated-warning-color) 0%,
-                        var(--warning-color) 100%);
+                background: linear-gradient(to bottom, var(--saturated-warning-color) 0%, var(--warning-color) 100%);
             }
         }
     }
 
     &--type-danger {
-        background: linear-gradient(to bottom, var(--saturated-red-color) 0%,
-                var(--saturated-red-color) 100%);
+        background: linear-gradient(to bottom, var(--saturated-red-color) 0%, var(--saturated-red-color) 100%);
         color: #FFFFFF;
         box-shadow: 0 1px 2px 0 rgba(var(--gray-color), 0.8);
 
@@ -157,8 +149,7 @@
         }
 
         &:focus {
-            box-shadow: 0 0 0 1px var(--red-color-dark) inset,
-            0 0 0 1px var(--red-color-dark);
+            box-shadow: 0 0 0 1px var(--red-color-dark) inset, 0 0 0 1px var(--red-color-dark);
         }
 
         &:active {
@@ -173,8 +164,7 @@
 
             &:hover,
             &:active {
-                background: linear-gradient(to bottom, var(--saturated-red-color) 0%,
-                        var(--red-color) 100%);
+                background: linear-gradient(to bottom, var(--saturated-red-color) 0%, var(--red-color) 100%);
             }
         }
     }
