--- a/packages/recomponents/src/components/r-loader/r-loader.scss
+++ b/packages/recomponents/src/components/r-loader/r-loader.scss
@@ -1,7 +1,9 @@
 .r-loader {
-    position: absolute;
+    position: fixed;
     z-index: $z-max;
     margin: auto;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     transition: opacity 0.3s ease-out;
