--- a/packages/recomponents/src/components/r-checkbox/r-checkbox.scss
+++ b/packages/recomponents/src/components/r-checkbox/r-checkbox.scss
@@ -1,3 +1,7 @@
+.r-checkbox {
+    position: relative;
+}
+
 input.r-field-checkbox[type=checkbox] {
     opacity: 0;
     position: absolute;
@@ -42,4 +46,27 @@ input.r-field-checkbox[type=checkbox] {
     top: -$space-xxs;
     right: -$space-xxs;
     opacity: 0;
+}
+
+.r-field-label-toggle {
+    display: inline-block;
+    position: relative;
+    padding-left: 2.8rem;
+    margin: 0;
+    cursor: pointer;
+}
+
+.r-field-label-toggle.is-disabled {
+    color: $muted;
+}
+
+.r-field-caption-toggle {
+    padding-left: 2.8rem;
+    margin-top: $space-rem-xxs;
+}
+
+.r-field-caption {
+    display: block;
+    color: $muted;
+    margin-top: $space-rem-xs;
 }
