--- a/packages/recomponents/src/components/r-button/r-button.scss
+++ b/packages/recomponents/src/components/r-button/r-button.scss
@@ -8,164 +8,139 @@
     vertical-align: baseline;
     user-select: none;
     appearance: none;
-    font-family: var(--primary-font-stack);
-    font-weight: $regular;
-    font-size: 1.4rem;
-    line-height: 2rem;
-    border-radius: $border-radius;
+    font-family: var(--button-font-family);
+    font-weight: var(--button-font-weight);
+    font-size: var(--button-font-size);
+    line-height: var(--button-font-line-height);
+    border-radius: var(--button-border-radius);
     border: none;
     cursor: pointer;
     outline: none;
-    transition: box-shadow .15s ease;
-
-    &:hover {
-        background: var(--background-color);
-        text-decoration: none;
-    }
-
-    &:focus {
-        box-shadow: 0 0 0 1px var(--primary-color) inset, 0 0 0 1px var(--primary-color);
-    }
-
-    &:active {
-        background: var(--background-color);
-        box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 3px 1px var(--light-gray-color) inset;
-    }
+    transition: var(--button-transition);
 
     &--size-small {
-        padding: 0.4rem 1.6rem;
+        padding: var(--button-size-s);
     }
 
     &--size-regular {
-        padding: 0.8rem 1.6rem;
+        padding: var(--button-size-m);
     }
 
     &--size-large {
-        padding: 1.6rem 3.2rem;
+        padding: var(--button-size-l);
     }
 
     &--type-default {
-        background: linear-gradient(180deg, #fff 0, var(--background-color));
-        color: var(--text-color);
-
-        /*box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 2px 0 rgba(var(--gray-color), 0.3);*/
-        box-shadow: 0 0 0 1px #C4CED8 inset, 0 1px 2px 0 rgba(161, 178, 193, 0.3);
+        background: var(--button-default-background);
+        color: var(--button-default-color);
+        box-shadow: var(--button-default-box-shadow);
+        border: var(--button-default-border);
 
         &:hover {
-            background: var(--background-color);
+            background: var(--button-default-hover-background);
+            color: var(--button-default-hover-color);
+            box-shadow: var(--button-default-hover-box-shadow);
+            border: var(--button-default-hover-border);
         }
 
         &:focus {
-            box-shadow: 0 0 0 1px var(--primary-color) inset, 0 0 0 1px var(--primary-color);
+            background: var(--button-default-focus-background);
+            color: var(--button-default-focus-color);
+            box-shadow: var(--button-default-focus-box-shadow);
+            border: var(--button-default-focus-border);
         }
 
         &:active {
-            background: var(--background-color);
-            box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 3px 1px var(--light-gray-color) inset;
+            background: var(--button-default-active-background);
+            color: var(--button-default-active-color);
+            box-shadow: var(--button-default-active-box-shadow);
+            border: var(--button-default-active-border);
         }
 
         &[disabled] {
-            opacity: 0.5;
-            cursor: auto;
+            opacity: var(--button-default-disabled-opacity);
+            cursor: var(--button-default--disabled-cursor);
             pointer-events: none;
-
-            &:hover {
-                background: linear-gradient(to bottom, #FFFFFF 0%, var(--background-color) 100%);
-            }
-
-            &:active {
-                box-shadow: 0 0 0 1px var(--light-gray-color) inset, 0 1px 2px 0 rgba(var(--gray-color), 0.3);
-            }
+            background: var(--button-default-disabled-background);
+            color: var(--button-default-disabled-color);
+            box-shadow: var(--button-default-disabled-box-shadow);
+            border: var(--button-default-disabled-border);
         }
     }
 
     &--type-primary {
-        background: linear-gradient(to bottom, var(--primary-color) 0%, var(--primary-color-light) 100%);
-        color: #FFFFFF;
-        box-shadow: 0 1px 2px 0 rgba(var(--gray-color), 0.8);
+        background: var(--button-primary-background);
+        color: var(--button-primary-color);
+        box-shadow: var(--button-primary-box-shadow);
+        border: var(--button-primary-border);
 
         &:hover {
-            background: var(--primary-color-light);
+            background: var(--button-primary-hover-background);
+            color: var(--button-primary-hover-color);
+            box-shadow: var(--button-primary-hover-box-shadow);
+            border: var(--button-primary-hover-border);
         }
 
         &:focus {
-            box-shadow: 0 0 0 1px var(--primary-color-dark) inset, 0 0 0 1px var(--primary-color-dark);
+            background: var(--button-primary-focus-background);
+            color: var(--button-primary-focus-color);
+            box-shadow: var(--button-primary-focus-box-shadow);
+            border: var(--button-primary-focus-border);
         }
 
         &:active {
-            background: #3000D7;
-            box-shadow: 0 1px 3px 1px var(--primary-color-medium) inset;
+            background: var(--button-primary-active-background);
+            color: var(--button-primary-active-color);
+            box-shadow: var(--button-primary-active-box-shadow);
+            border: var(--button-primary-active-border);
         }
 
         &[disabled] {
-            opacity: 0.5;
-            cursor: auto;
+            opacity: var(--button-primary-disabled-opacity);
+            cursor: var(--button-primary--disabled-cursor);
             pointer-events: none;
-
-            &:hover,
-            &:active {
-                background: linear-gradient(to bottom, var(--primary-color) 0%, var(--primary-color-light) 100%);
-            }
-        }
-    }
-
-    &--type-warning {
-        background: linear-gradient(to bottom, var(--saturated-warning-color) 0%, var(--warning-color) 100%);
-        color: #FFFFFF;
-        box-shadow: 0 1px 2px 0 rgba(var(--gray-color), 0.8);
-
-        &:hover {
-            background: var(--warning-color-light);
-        }
-
-        &:focus {
-            box-shadow: 0 0 0 1px var(--warning-color-dark) inset, 0 0 0 1px var(--warning-color-dark);
-        }
-
-        &:active {
-            background: var(--warning-color-medium);
-            box-shadow: 0 1px 3px 1px var(--warning-color-dark) inset;
-        }
-
-        &[disabled] {
-            opacity: 0.5;
-            cursor: auto;
-            pointer-events: none;
-
-            &:hover,
-            &:active {
-                background: linear-gradient(to bottom, var(--saturated-warning-color) 0%, var(--warning-color) 100%);
-            }
+            background: var(--button-primary-disabled-background);
+            color: var(--button-primary-disabled-color);
+            box-shadow: var(--button-primary-disabled-box-shadow);
+            border: var(--button-primary-disabled-border);
         }
     }
 
     &--type-danger {
-        background: linear-gradient(to bottom, var(--saturated-red-color) 0%, var(--saturated-red-color) 100%);
-        color: #FFFFFF;
-        box-shadow: 0 1px 2px 0 rgba(var(--gray-color), 0.8);
+        background: var(--button-danger-background);
+        color: var(--button-danger-color);
+        box-shadow: var(--button-danger-box-shadow);
+        border: var(--button-danger-border);
 
         &:hover {
-            background: var(--red-color-light);
+            background: var(--button-danger-hover-background);
+            color: var(--button-danger-hover-color);
+            box-shadow: var(--button-danger-hover-box-shadow);
+            border: var(--button-danger-hover-border);
         }
 
         &:focus {
-            box-shadow: 0 0 0 1px var(--red-color-dark) inset, 0 0 0 1px var(--red-color-dark);
+            background: var(--button-danger-focus-background);
+            color: var(--button-danger-focus-color);
+            box-shadow: var(--button-danger-focus-box-shadow);
+            border: var(--button-danger-focus-border);
         }
 
         &:active {
-            background: var(--red-color-medium);
-            box-shadow: 0 1px 3px 1px var(--red-color-dark) inset;
+            background: var(--button-danger-active-background);
+            color: var(--button-danger-active-color);
+            box-shadow: var(--button-danger-active-box-shadow);
+            border: var(--button-danger-active-border);
         }
 
         &[disabled] {
-            opacity: 0.5;
-            cursor: auto;
+            opacity: var(--button-danger-disabled-opacity);
+            cursor: var(--button-danger--disabled-cursor);
             pointer-events: none;
-
-            &:hover,
-            &:active {
-                background: linear-gradient(to bottom, var(--saturated-red-color) 0%, var(--red-color) 100%);
-            }
+            background: var(--button-danger-disabled-background);
+            color: var(--button-danger-disabled-color);
+            box-shadow: var(--button-danger-disabled-box-shadow);
+            border: var(--button-danger-disabled-border);
         }
     }
 
@@ -177,38 +152,40 @@
 /**
 * Icons
 */
-.r-button.has-icon {
-    padding: $space-rem-s;
-}
+.r-button {
+    &--size-small.has-icon {
+        padding: var(--button-icon-size-s);
+    }
 
-.r-button.has-icon.r-button-l {
-    padding: $space-rem-m $space-rem-l;
-}
+    &--size-regular.has-icon {
+        padding: var(--button-icon-size-m);
+    }
 
-.r-button.has-icon.r-button-s {
-    padding: $space-rem-xs;
-}
+    &--size-large.has-icon {
+        padding: var(--button-icon-size-l);
+    }
 
-.r-button.has-icon-left .r-icon {
-    margin-right: $space-rem-s;
-}
+    &.has-icon-left .r-icon {
+        margin-right: var(--button-icon-left-margin);
+    }
 
-.r-button.has-icon-right .r-icon {
-    margin-left: $space-rem-s;
-}
+    &.has-icon-right .r-icon {
+        margin-left: var(--button-icon-right-margin);
+    }
 
-.r-button.has-icon.r-button-fitted {
-    padding: 0;
-}
+    &.has-icon.r-button-fitted {
+        padding: 0;
+    }
 
-//Colors
-.r-button--type-primary .r-icon,
-.r-button--type-warning .r-icon,
-.r-button--type-danger .r-icon,
-.r-button-group .r-button.is-active .r-icon {
-    fill: #FFFFFF;
-}
+    &--type-default .r-icon {
+        fill: var(--button-icon-default-color);
+    }
 
-.r-button-link .r-icon:not(.r-icon-) {
-    fill: var(--primary-color);
+    &--type-primary .r-icon {
+        fill: var(--button-icon-primary-color);
+    }
+
+    &--type-danger .r-icon {
+        fill: var(--button-icon-danger-color);
+    }
 }
