--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -1,37 +1,360 @@
-html {
-    font-size: 62.5%;
+html, .root {
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
     text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    font-size: 62.5%;
+    line-height:  var(--font-line-height-p);
 }
 
 body, .article {
     font-family: var(--primary-font-stack);
-    font-size: $paragraph-rem;
-    line-height: $space-rem-default;
-    font-weight: $regular;
+    font-size: var(--font-size-p);
+    line-height: var(--font-line-height-p);
+    font-weight: var(--font-weight-regular);
 }
 
 :root {
-    --background-color: #F6F8F9;
-    --primary-color: #0044D4;
-    --primary-color-dark: #00236e;
-    --primary-color-light: #2600d4;
-    --primary-color-medium: #0034a1;
-    --primary-color-transparent: rgba(0, 68, 212, 0.5);
+    // Typography
+    // ------------------------------------------------
 
+    // Font Variables
+    --primary-font-stack: 'Roboto', sans-serif;
+    --secondary-font-stack: 'Montserrat', sans-serif;
+    --code-font-stack: 'Roboto Mono', monospace;
+
+    // Normalize Font Global Size
+    --normalize-font-size: 62.5%;
+
+    // Font Weights
+    --font-weight-light: 300;
+    --font-weight-regular: 400;
+    --font-weight-medium: 500;
+    --font-weight-semi-bold: 600;
+    --font-weight-bold: 700;
+
+    // Font Sizes
+    --font-size-h1: 28px;
+    --font-size-h2: 16px;
+    --font-size-h3: 13px;
+    --font-size-h4: 12px;
+    --font-size-h5: 12px;
+    --font-size-h6: 12px;
+    --font-size-p: 14px;
+
+    // Font Line-height
+    --font-line-height-h1: 40px;
+    --font-line-height-h2: 20px;
+    --font-line-height-h3: 20px;
+    --font-line-height-h4: 20px;
+    --font-line-height-h5: 20px;
+    --font-line-height-h6: 20px;
+    --font-line-height-p: 20px;
+
+    // Colors
+    // ------------------------------------------------
+    --primary-color: #0044D4;
+    --primary-color-light: #CCDAF6;
+    --primary-color-dark: #0000C7;
+    --secondary-color: #0D2B3E;
+    --secondary-color-light: #CFD5D8;
+    --secondary-color-dark: #091E2B;
+    --accent-color: #00CCC4;
+    --accent-color-light: #B3F0ED;
+    --accent-color-dark: #00524E;
+    --positive-color: #00AA13;
+    --positive-color-light: #C4F7CA;
+    --positive-color-dark: #00660B;
+    --negative-color: #E53935;
+    --negative-color-light: #FFD4D3;
+    --negative-color-dark: #B5040F;
     --warning-color: #F1C400;
+    --warning-color-light: #FFF0AD;
+    --warning-color-dark: #604E00;
+    --background-color: #F6F8F9;
+    --background-color-light: #F9FAFB;
+    --background-color-dark: #485164;
+    --gray-color: #BDC9D4;
+    --gray-color-light: #E1E7EA;
+    --gray-color-dark: #515961;
+    --mono-color-0: #FFFFFF;
+    --mono-color-100: #F6F8F9;
+    --mono-color-200: #DDDFE0; // <--- Contrast background limit
+    --mono-color-300: #C5C6C7;
+    --mono-color-400: #ACAEAE;
+    --mono-color-500: #949595;
+    --mono-color-600: #7B7C7D;
+    --mono-color-700: #626364;
+    --mono-color-800: #4A4A4B;
+    --mono-color-900: #313232;
+    --mono-color-1000: #000000;
+
+    --text-color: var(--secondary-color);
+    --text-color-light: var(--mono-color-0);
+    --text-muted: var(--mono-color-800);
+
+
+    // Spatial Progression
+    // ------------------------------------------------
+    --inset-default: 20px;
+    --inset-xxs: 2px;
+    --inset-xs: 4px;
+    --inset-s: 8px;
+    --inset-m: 16px;
+    --inset-l: 32px;
+    --inset-xl: 64px;
+    --stack-xxs: 0 0 2px 0;
+    --stack-xs: 0 0 4px 0;
+    --stack-s: 0 0 8px 0;
+    --stack-m: 0 0 16px 0;
+    --stack-l: 0 0 32px 0;
+    --stack-xl: 0 0 64px 0;
+    --space-default: 20px;
+    --space-xxs: 2px;
+    --space-xs: 4px;
+    --space-s: 8px;
+    --space-m: 16px;
+    --space-l: 32px;
+    --space-xl: 64px;
+
+    // Badges
+    // ------------------------------------------------
+    --badge-text-color: var(--text-color);
+    --badge-border-radius: var(--border-radius-default);
+    --badge-padding: var(--space-xxs) var(--space-s);
+    --badge-font-family: var(--primary-font-stack);
+    --badge-font-weight: var(--font-weight-regular);
+    --badge-font-size: var(--font-size-p);
+    --badge-font-line-height: var(--font-line-height-p);
+    --badge-box-shadow: 0 0 0 2px var(--mono-color-0);
+    --badge-default-background: var(--mono-color-200);
+    --badge-positive-background: var(--positive-color-light);
+    --badge-positive-border: none;
+    --badge-negative-background: var(--negative-color-light);
+    --badge-negative-border: none;
+    --badge-warning-background: var(--warning-color-light);
+    --badge-warning-border: none;
+    --badge-info-background: var(--primary-color-light);
+    --badge-info-border: none;
+
+
+    // Buttons
+    // ------------------------------------------------
+    --button-border-radius: var(--border-radius);
+    --button-font-family: var(--primary-font-stack);
+    --button-font-weight: var(--font-weight-regular);
+    --button-font-size: var(--font-size-p);
+    --button-font-line-height: var(--font-line-height-p);
+    --button-transition: box-shadow var(--timing-100) var(--animation-ease);
+    --button-size-s: var(--space-xs) var(--space-m);
+    --button-size-m: var(--space-s) var(--space-m);
+    --button-size-l: var(--space-m) var(--space-l);
+
+    // Default
+    --button-default-color: var(--text-color);
+    --button-default-background: linear-gradient(180deg, var(--mono-color-0) 0, var(--mono-color-100));
+    --button-default-box-shadow: 0 0 0 1px var(--gray-color) inset, 0 1px 2px 0 var(--mono-color-200);
+    --button-default-border: none;
+    // Default Hover
+    --button-default-hover-color: var(--text-color);
+    --button-default-hover-background: var(--mono-color-100);
+    --button-default-hover-box-shadow: 0 0 0 1px var(--gray-color) inset, 0 1px 2px 0 var(--mono-color-200);
+    --button-default-hover-border: none;
+    // Default Focus
+    --button-default-focus-color: var(--text-color);
+    --button-default-focus-background: linear-gradient(180deg, var(--mono-color-0) 0, var(--mono-color-100));
+    --button-default-focus-box-shadow: 0 0 0 1px var(--primary-color) inset, 0 0 0 1px var(--primary-color);
+    --button-default-focus-border: none;
+    // Default Active
+    --button-default-active-color: var(--text-color);
+    --button-default-active-background: var(--mono-color-100);
+    --button-default-active-box-shadow: 0 0 0 1px var(--gray-color) inset, 0 1px 3px 1px var(--mono-color-300) inset;
+    --button-default-active-border: none;
+    // Default Disabled
+    --button-default-disabled-opacity: 0.5;
+    --button-default-disabled-cursor: auto;
+    --button-default-disabled-color: var(--text-color);
+    --button-default-disabled-background: linear-gradient(180deg, var(--mono-color-0) 0, var(--mono-color-100));
+    --button-default-disabled-box-shadow: 0 0 0 1px var(--gray-color) inset, 0 1px 2px 0 var(--mono-color-200);
+    --button-default-disabled-border: none;
+
+    // Primary
+    --button-primary-color: var(--text-color-light);
+    --button-primary-background: linear-gradient(180deg, var(--primary-color) 0, var(--primary-color-dark));
+    --button-primary-box-shadow: 0 1px 2px 0 var(--mono-color-200);
+    --button-primary-border: none;
+    // Primary Hover
+    --button-primary-hover-color: var(--text-color-light);
+    --button-primary-hover-background: var(--primary-color-dark);
+    --button-primary-hover-box-shadow: 0 1px 2px 0 var(--mono-color-200);
+    --button-primary-hover-border: none;
+    // Primary Focus
+    --button-primary-focus-color: var(--text-color-light);
+    --button-primary-focus-background: linear-gradient(180deg, var(--primary-color) 0, var(--primary-color-dark));
+    --button-primary-focus-box-shadow: 0 0 0 1px var(--primary-color-dark) inset, 0 0 0 1px var(--primary-color-dark);
+    --button-primary-focus-border: none;
+    // Primary Active
+    --button-primary-active-color: var(--text-color-light);
+    --button-primary-active-background: var(--primary-color-dark);
+    --button-primary-active-box-shadow: 0 1px 3px 1px var(--primary-color-dark) inset;
+    --button-primary-active-border: none;
+    // Primary Disabled
+    --button-primary-disabled-opacity: 0.5;
+    --button-primary-disabled-cursor: auto;
+    --button-primary-disabled-color: var(--text-color-light);
+    --button-primary-disabled-background: linear-gradient(180deg, var(--primary-color) 0, var(--primary-color-dark));
+    --button-primary-disabled-box-shadow: none;
+    --button-primary-disabled-border: none;
+
+    // Danger
+    --button-danger-color: var(--text-color-light);
+    --button-danger-background: linear-gradient(180deg, var(--negative-color) 0, var(--negative-color-dark));
+    --button-danger-box-shadow: 0 1px 2px 0 var(--mono-color-200);
+    --button-danger-border: none;
+    // Danger Hover
+    --button-danger-hover-color: var(--text-color-light);
+    --button-danger-hover-background: var(--negative-color-dark);
+    --button-danger-hover-box-shadow: 0 1px 2px 0 var(--mono-color-200);
+    --button-danger-hover-border: none;
+    // Danger Focus
+    --button-danger-focus-color: var(--text-color-light);
+    --button-danger-focus-background: linear-gradient(180deg, var(--negative-color) 0, var(--negative-color-dark));
+    --button-danger-focus-box-shadow: 0 0 0 1px var(--negative-color-dark) inset, 0 0 0 1px var(--negative-color-dark);
+    --button-danger-focus-border: none;
+    // Danger Active
+    --button-danger-active-color: var(--text-color-light);
+    --button-danger-active-background: var(--negative-color-dark);
+    --button-danger-active-box-shadow: 0 1px 3px 1px var(--negative-color-dark) inset;
+    --button-danger-active-border: none;
+    // Danger Disabled
+    --button-danger-disabled-opacity: 0.5;
+    --button-danger-disabled-cursor: auto;
+    --button-danger-disabled-color: var(--text-color-light);
+    --button-danger-disabled-background: linear-gradient(180deg, var(--negative-color) 0, var(--negative-color-dark));
+    --button-danger-disabled-box-shadow: none;
+    --button-danger-disabled-border: none;
+
+    // Buttons Icons
+    --button-icon-size-s: var(--space-xs);
+    --button-icon-size-m: var(--space-s);
+    --button-icon-size-l: var(--space-m);
+    --button-icon-left-margin: var(--space-s);
+    --button-icon-right-margin: var(--space-s);
+    --button-icon-default-color: var(--gray-color);
+    --button-icon-primary-color: var(--mono-color-0);
+    --button-icon-danger-color: var(--mono-color-0);
+
+    // Checkboxes
+    // ------------------------------------------------
+    --checkbox-transition: box-shadow var(--timing-100) var(--animation-ease);
+    --checkbox-background: var(--mono-color-0);
+    --checkbox-border-radius: var(--border-radius-xxs);
+    --checkbox-box-shadow: 0 0 0 1px var(--gray-color) inset, 0 1px 2px 0 var(--mono-color-300) inset;
+    --checkbox-border: none;
+    --checkbox-checked-background: var(--mono-color-0);
+    --checkbox-checked-box-shadow: 0 0 0 1px var(--primary-color) inset, 0 1px 2px 0 var(--mono-color-300) inset, 0 0 0 1px var(--primary-color);
+    --checkbox-checked-border: none;
+    --checkbox-checked-icon-color: var(--primary-color);
+    --checkbox-focus-background: var(--mono-color-0);
+    --checkbox-focus-box-shadow: 0 0 0 1px var(--primary-color) inset, 0 1px 2px 0 var(--mono-color-300) inset, 0 0 0 1px var(--primary-color);
+    --checkbox-focus-border: none;
+    --checkbox-disabled-background: var(--mono-color-100);
+    --checkbox-disabled-box-shadow: 0 0 0 1px var(--gray-color) inset;
+    --checkbox-label-font-size: var(--font-size-p);
+    --checkbox-label-color: var(--text-color);
+    --checkbox-label-line-height: var(--font-line-height-p);
+    --checkbox-label-font-weight: var(--font-weight-regular);
+    --checkbox-label-left-space: 28px;
+    --checkbox-label-disabled-color: var(--text-muted);
+    --checkbox-captions-font-size: var(--font-size-p);
+    --checkbox-captions-color: var(--text-muted);
+    --checkbox-captions-line-height: var(--font-line-height-p);
+    --checkbox-captions-font-weight: var(--font-weight-regular);
+    --checkbox-captions-left-space: 28px;
+    --checkbox-captions-margin-top: var(--space-xxs);
+
+
+    // Dropdown
+    // ------------------------------------------------
+    --dropdown-min-width: 280px;
+    --dropdown-background: var(--mono-color-0);
+    --dropdown-box-shadow: 0 0 0 1px var(--gray-color-light), 0 7px 14px 0 var(--gray-color-light), 0 3px 6px 0 var(--gray-color-light);
+    --dropdown-border-radius: var(--border-radius);
+    --dropdown-transition: visibility var(--timing-50) var(--animation-ease), opacity var(--timing-50) var(--animation-ease);
+    --dropdown-z-index: var(--z-index-100);
+    --dropdown-content-padding: var(--space-s) 0;
+    --dropdown-content-divider: 1px solid var(--gray-color-light);
+    --dropdown-content-title-padding: var(--space-s) var(--space-default);
+    --dropdown-content-scroll-max-height: 200px;
+    --dropdown-content-item-line-height: var(--font-line-height-p);
+    --dropdown-content-item-color: var(--text-color);
+    --dropdown-content-item-padding: var(--space-s) var(--space-default);
+    --dropdown-content-item-hover-color: var(--mono-color-0);
+    --dropdown-content-item-hover-background: var(--primary-color);
+    --dropdown-content-item-icon-hover-color: var(--mono-color-0);
+    --dropdown-content-item-avatar-hover-color: var(--primary-color-light);
+    --dropdown-content-padded: var(--space-m);
+    --dropdown-contetn-help: var(--space-s) var(--space-m);
+
+
+    // Text Muted
+    --muted-text-color: #6B7384;
+
+    // --background-color: #F6F8F9;
+
+
+
+    // Border Radius
+    // ------------------------------------------------
+    --border-radius: 4px;
+    --border-radius-default: 20px;
+    --border-radius-xxs: 2px;
+    --border-radius-xs: 4px;
+    --border-radius-s: 8px;
+    --border-radius-m: 16px;
+    --border-radius-l: 32px;
+    --border-radius-xl: 64px;
+
+    // Animations
+    // ------------------------------------------------
+    --timing-50: .10s;
+    --timing-100: .20s;
+    --timing-400: .4s;
+    --timing-700: .6s;
+    --animation-ease: ease;
+    --animation-ease-in-cruve: cubic-bezier(.8, .2, .6, 1);
+    --animation-ease-out-curve: cubic-bezier(.2, .8, .4, 1);
+    --animation-ease-in-out-curve: cubic-bezier(0.4, 0, 0.2, 1);
+
+    // Z-Index
+    // ------------------------------------------------
+    --z-index-1000: 1000;
+    --z-index-100: 100;
+    --z-index-90: 90;
+    --z-index-80: 80;
+    --z-index-70: 70;
+    --z-index-60: 60;
+    --z-index-50: 50;
+    --z-index-40: 40;
+    --z-index-30: 30;
+    --z-index-20: 20;
+    --z-index-10: 10;
+
+
+
+    // --warning-color: #F1C400;
     --red-color: #E53935;
-    --gray-color: #A1B2C1;
-    --text-color: #0D2B3E;
+    // --gray-color: #A1B2C1;
+    // --text-color: #0D2B3E;
 
     --saturated-red-color: #ff201b;
     --saturated-warning-color: #f1c400;
 
-    --warning-color-dark: #8b7100;
+    // --warning-color-dark: #8b7100;
     --warning-color-medium: #be9b00;
-    --warning-color-light: #d8af00;
+    // --warning-color-light: #d8af00;
 
     --red-color-dark: #9f1815;
     --red-color-medium: #cd1e1a;
@@ -39,19 +362,15 @@ body, .article {
 
     --light-red-color: #FFD4D3;
     --light-gray-color: #C4CED8;
-    --light-blue-color: #DCE7FE;
+    --light-blue-color: #CCDAF6;
     --light-green-color: #C4F7CA;
     --light-yellow-color: #FFF0AD;
     --faint-gray-color: #E1E7EA;
 
-    --primary-font-stack: 'Roboto', sans-serif;
-    --secondary-font-stack: 'Montserrat', sans-serif;
-    --code-font-stack: 'Roboto Mono', monospace;
 
-    --font-weight-regular: 400;
-    --border-radius: 4px;
+
     --muted-color: #efeef0;
-    --muted-text-color: #6B7384;
+
 
     --tooltip-background-color: #505A6F;
 }
